Closed Bug 1666030 Opened 5 years ago Closed 5 years ago

Mingw build failure /builds/worker/checkouts/gecko/mozglue/misc/EarlyBlankWindow.cpp:98:10: error: use of undeclared identifier 'floor'

Categories

(Core :: mozglue, defect)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox81 --- unaffected
firefox82 --- fixed
firefox83 --- fixed

People

(Reporter: away, Assigned: alexical)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

This comes up on my clang-trunk builds, not sure why it isn't happening on m-c:

/builds/worker/checkouts/gecko/mozglue/misc/EarlyBlankWindow.cpp:98:10: error: use of undeclared identifier 'floor'
Logviewer
make[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:724: EarlyBlankWindow.o] Error 1 

https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=316113542&repo=ash&lineNumber=4320

Bugbug thinks this bug should belong to this component, but please revert this change in case of error.

Component: General → mozglue
Product: Firefox → Core

Set release status flags based on info from the regressing bug 1656526

Assignee: nobody → dothayer
Status: NEW → ASSIGNED
Pushed by dothayer@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7413cfd05f7b Fix floor missing on some builds r=dmajor
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch

Please nominate this for Beta approval when you get a chance.

Flags: needinfo?(dothayer)

Comment on attachment 9177644 [details]
Bug 1666030 - Fix floor missing on some builds r?dmajor

Beta/Release Uplift Approval Request

  • User impact if declined: Some builds of mozilla-beta may fail to compile.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): It should (barring exceptionally strange circumstances) only affect whether we can or cannot build mozilla-beta successfully.
  • String changes made/needed: None
Flags: needinfo?(dothayer)
Attachment #9177644 - Flags: approval-mozilla-beta?

Comment on attachment 9177644 [details]
Bug 1666030 - Fix floor missing on some builds r?dmajor

build fix, approved for 82.0b4

Attachment #9177644 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

I temporarily hacked around the other problems in clang-12 builds, and confirmed that the floor piece at least is fixed. Thanks!

Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: