Bug 1666030 - Fix floor missing on some builds r=dmajor

Depends on D91004

Differential Revision: https://phabricator.services.mozilla.com/D91284