mozglue/misc/PreXULSkeletonUI.cpp
@@ -7,6 +7,7 @@
 #include "PreXULSkeletonUI.h"
 
 #include <algorithm>
+#include <math.h>
 
 #include "mozilla/Assertions.h"
 #include "mozilla/Attributes.h"
